<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/txtNomCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/lblRUC"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtRuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/lblDireccion"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtDirLinCred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/lblZona"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblEstado"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblCobroJud"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtCobJudicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblCondicionPago"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtConPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblLetraPendiente"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtLetraPendiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblLimiteCredito"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblMonedaLM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtLimiteCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblSaldo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblmoneda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/txtSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnDescargar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDescargar" />

</LinearLayout>