<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shape_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="63dp"
            android:layout_height="wrap_content"

            android:text="@string/lblCodigo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#00305E"/>

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCodAlmacen"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#00305E"/>

        <TextView
            android:id="@+id/txtCodAlmacen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:text="@string/lblPrecio"
            android:textColor="#00305E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/lblCantPed"
            android:textColor="#00305E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCantPed"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/lblCantFac"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#00305E"/>

        <TextView
            android:id="@+id/txtCantFac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="63dp"
            android:layout_height="20dp"
            android:text="@string/lblUnidad"
            android:textColor="#00305E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUnidad"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/lblDscto"
            android:textColor="#00305E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDscto"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_percent"
            android:textSize="15sp" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/lblTotal"
            android:textColor="#00305E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
