<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/lblCodigo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#00305E"/>

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/lblDescripcion"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/lblUnidVta"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#00305E"/>

        <TextView
            android:id="@+id/txtUnidVta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/lblConsultArti"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#00305E"/>

    <ListView
        android:id="@+id/listStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>